--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1 class="about-me-text">MY PROJECTS</h1>
         <div class="project-list">
             <div class="project">
-                <img src="./images/laser.jpg">
+                <img src="laser.jpg">
                 <div class="layer">
                     <h3>LASER SECURITY ALARM System </h3>
                    <P>A laser alarm system operates by projecting a beam of invisible laser light across a doorway or window opening. When the light is broken, it activates a buzzer or alarm. The principles are very similar to those of lower tech burglar alarms. A laser alarm requires only slightly more sophisticated electronics and can be put together by anyone with a soldering gun and a knack for tinkering with basic circuits and transistors.</P>
