--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="about-me">
         <div class="row">
             <div class="me">
-                <img src="images/santhu photo_page-0001.jpg">
+                <img src="santhu photo_page-0001.jpg">
             </div>
                 <div class="about-me-text">
                     <h1 class="about-text">ABOUT ME</h1>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="project">
-                <img src="images/Clap-ON-OFF-switch-circuit.jpg">
+                <img src="Clap-ON-OFF-switch-circuit.jpg">
                 <div class="layer">
                     <h3> CLAP ON CLAP OFF SWITCH USING IC7474 </h3>
                    <P>:The CLAP ON CLAP OFF SWITCH could be used in home automation.It works as a switch which makes devices ON ans OFF by making a clap sound. </P>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="project">
-                <img src="images/Infrared-Sensor-Circuit-Diagram.jpg">
+                <img src="Infrared-Sensor-Circuit-Diagram.jpg">
                 <div class="layer">
                     <h3> IR PROXIMITY SENSOR </h3>
                    <P> IR technology is used in daily life and also in industries for different purposes.The main benefits of IR sensors are low power usage, their simple design & their convenient features.IR signals are not noticeable by the human eye. The IR radiation in the electromagnetic spectrum can be found in the regions of the visible & microwave.</P>
